Reverted to using my own code for all tcp stuff now.
Based off code for a "rustbot" that I found somewhere - kind of a mix
between that and libhttp-client.  Only partially implemented, and
currently crashes due to a bug in std::net::tcp - #3891.

--- a/crawler/Makefile.in
+++ b/crawler/Makefile.in
@@ -9,6 +9,7 @@ CFLAGS ?=
 CFLAGS += -fPIC
 
 RUST_SRC = $(shell find $(VPATH)/. -type f -name '*.rs')
+RUST_SRC = crawler.rs request.rs
 
 .PHONY: all
 all: crawler
