--- a/crawler/Makefile.in
+++ b/crawler/Makefile.in
@@ -9,22 +9,15 @@ CFLAGS ?=
 CFLAGS += -fPIC
 
 RUST_SRC = $(shell find $(VPATH)/. -type f -name '*.rs')
-RUST_SRC = crawler.rs request.rs
 
 .PHONY: all
 all: crawler
 
-crawler: http_client.rc $(RUST_SRC) libhttp_parser.a
+crawler: http_client.rc $(RUST_SRC)
 	$(RUSTC) $(RUSTFLAGS) $< -o $@
 
 #http_client-test: http_client.rc $(RUST_SRC) libhttp_parser.a
 #	$(RUSTC) $(RUSTFLAGS) $< -o $@ --test
-
-libhttp_parser.a: http_parser.o
-	$(AR) rcs $@ $<
-
-http_parser.o: http_parser.c
-	$(CC) $(CFLAGS) $< -o $@ -c
 
 #check: http_client-test
 #	./http_client-test
