--- a/crawler/Makefile.in
+++ b/crawler/Makefile.in
@@ -24,4 +24,4 @@ crawler: http_client.rc $(RUST_SRC)
 
 .PHONY: clean
 clean:
-	rm -f http_client-test *.o *.a *.so *.dylib *.dll *.dummy
+	rm -f http_client-test *.o *.a *.so *.dylib *.dll *.dummy crawler
