Add the average time at end of benchmark.
Also, bubble-sort was actually swap-sort - my bad :(

--- a/data-structures/Makefile
+++ b/data-structures/Makefile
@@ -1,7 +1,7 @@
-all: bubble-sort
+all: swap-sort
 
-bubble-sort: libbenchmark bubble-sort.rs
-	rustc bubble-sort.rs -L .
+swap-sort: libbenchmark swap-sort.rs
+	rustc swap-sort.rs -L .
 
 libbenchmark: benchmark.rs libtimer
 	rustc --lib benchmark.rs -L .
@@ -10,4 +10,4 @@ libtimer: timer.rs
 	rustc --lib timer.rs
 
 clean:
-	rm libbenchmark* bubble-sort
+	rm libbenchmark* swap-sort
