Added bubble sort implementation

--- a/data-structures/Makefile
+++ b/data-structures/Makefile
@@ -1,7 +1,10 @@
-all: swap-sort
+all: swap-sort bubble-sort
 
 swap-sort: libbenchmark swap-sort.rs
 	rustc swap-sort.rs -L .
+
+bubble-sort: libbenchmark bubble-sort.rs
+	rustc bubble-sort.rs -L .
 
 libbenchmark: benchmark.rs libtimer
 	rustc --lib benchmark.rs -L .
