Further makefile cleanup.
New programs will be added automatically.
Also reduced the number of rules significantly.

--- a/data-structures/Makefile
+++ b/data-structures/Makefile
@@ -1,35 +1,25 @@
 RUST_FLAGS = -L . -O
+
+LIBS := benchmark timer
+
 ALL_SOURCES := $(wildcard *.rs)
+ALL_BINARIES := $(BINARIES) $(ALL_SOURCES:%.rs=lib%)
+
 BINARIES := $(ALL_SOURCES:.rs=)
-BINARIES += $(ALL_SOURCES:%.rs=lib%)
+BINARIES := $(filter-out $(LIBS), $(BINARIES))
 
-all: swap-sort bubble-sort selection-sort merge-sort merge-sort-par
 
-swap-sort: libbenchmark swap-sort.rs
-	rustc $(RUST_FLAGS) swap-sort.rs
+all: $(BINARIES)
 
-bubble-sort: libbenchmark bubble-sort.rs
-	rustc $(RUST_FLAGS) bubble-sort.rs
+%: %.rs libbenchmark
+	rustc $(RUST_FLAGS) $<
 
-selection-sort: libbenchmark selection-sort.rs
-	rustc $(RUST_FLAGS) selection-sort.rs
+libbenchmark: libtimer
 
-merge-sort: libbenchmark merge-sort.rs
-	rustc $(RUST_FLAGS) merge-sort.rs
-
-merge-sort-par: libbenchmark merge-sort-par.rs
-	rustc $(RUST_FLAGS) merge-sort-par.rs
-
-libbenchmark: benchmark.rs libtimer
-	rustc $(RUST_FLAGS) benchmark.rs
-	@#rustc $(RUST_FLAGS) --test -o $@ $<
-	@touch $@
-
-libtimer: timer.rs
-	rustc $(RUST_FLAGS) timer.rs
-	@#rustc $(RUST_FLAGS) --test -o $@ $<
+lib%: %.rs
+	rustc $(RUST_FLAGS) $<
 	@touch $@
 
 clean:
 	@echo "Cleaning ..."
-	@rm -f *.so $(BINARIES)
+	@rm -f *.so $(ALL_BINARIES)
