--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ before_install:
 install:
   - sudo apt-get install rust-nightly
 script:
-  - cd first && make
-  - cd sorting && make
+  - pushd first && make && popd
+  - pushd sorting && make && popd
