Add notifications to Travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ install:
 script:
   - pushd first && make && popd
   - pushd sorting && make && popd
+
+notifications:
+    email:
+        - damien.schoof+github@gmail.com
