Implement pre-order traversal with iterator

--- a/trees/Makefile
+++ b/trees/Makefile
@@ -3,22 +3,16 @@ RUST_FLAGS = -L . -O
 LIBS := 
 
 ALL_SOURCES := $(wildcard *.rs)
-BINARIES := binary-tree
-
-ALL_BINARIES := $(BINARIES) $(ALL_SOURCES:%.rs=lib%)
-
-BINARIES := $(filter-out $(LIBS), $(BINARIES))
-
+BINARIES := binarytree
 
 all: $(BINARIES)
 
-binary-tree: $(ALL_SOURCES)
-	rustc $(RUST_FLAGS) binary-tree.rs
+run: $(BINARIES)
+	./binarytree
 
-lib%: %.rs
-	rustc $(RUST_FLAGS) $<
-	@touch $@
+binarytree: $(ALL_SOURCES)
+	rustc $(RUST_FLAGS) binarytree.rs
 
 clean:
 	@echo "Cleaning ..." 
-	@rm -f *.so $(ALL_BINARIES)
+	@rm -f $(BINARIES)
