--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ install:
   - tar xfz rust-nightly-x86_64-unknown-linux-gnu.tar.gz
   - (cd rust-nightly-x86_64-unknown-linux-gnu/ && sudo ./install.sh)
 script:
+    - rustc --version
     - make -k
-
 notifications:
     email:
         - damien.schoof+github@gmail.com
