--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - (cd rust-nightly-x86_64-unknown-linux-gnu/ && sudo ./install.sh)
 script:
     - rustc --version
-    - make -k
+    - RUST_BACKTRACE=1 make -k
 notifications:
     email:
         - damien.schoof+github@gmail.com
