Update to use cargo for sorting project

--- a/sorting/Makefile
+++ b/sorting/Makefile
@@ -1,26 +1,5 @@
-RUST_FLAGS = -L . -O
-
-LIBS := benchmark timer
-
-ALL_SOURCES := $(wildcard *.rs)
-BINARIES := $(ALL_SOURCES:.rs=)
-
-ALL_BINARIES := $(BINARIES) $(ALL_SOURCES:%.rs=lib%)
-
-BINARIES := $(filter-out $(LIBS), $(BINARIES))
-
-
-all: $(BINARIES)
-
-%: %.rs libbenchmark
-	rustc $(RUST_FLAGS) $<
-
-libbenchmark: libtimer
-
-lib%: %.rs
-	rustc $(RUST_FLAGS) $<
-	@touch $@
+all: 
+	@cargo build
 
 clean:
-	@echo "Cleaning ..."
-	@rm -f *.so $(ALL_BINARIES)
+	@cargo clean
