--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 env:
     global:
         - LD_LIBRARY_PATH: /usr/local/lib
-before_install:
-  - yes | sudo add-apt-repository ppa:hansjorg/rust
-  - sudo apt-get update
 install:
-  - curl -O http://static.rust-lang.org/dist/rust-nightly-x86_64-unknown-linux-gnu.tar.gz
-  - tar xfz rust-nightly-x86_64-unknown-linux-gnu.tar.gz
-  - (cd rust-nightly-x86_64-unknown-linux-gnu/ && sudo ./install.sh)
+  - curl https://static.rust-lang.org/rustup.sh | sudo sh -
 script:
     - rustc --version
     - RUST_BACKTRACE=1 make -k
